--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <a href="https://github.com/christylee120">christylee120</a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <a href="https://linkedin.com/in/christy-chaeyeon-lee/">christy-chaeyeon-lee</a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://christylee120.github.io">christylee120.github.io</a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://christylee120.github.io/ChristyLee/">christylee120.github.io/ChristyLee</a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>christy.lee@uwaterloo.ca</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>University:</strong> <span>University of Waterloo</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BASc in Biomedical Engineering</span></li>
