Website: Christy Lee - Second Edit

--- a/index.html
+++ b/index.html
@@ -515,6 +515,18 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-solidworks">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/solidworks4.png" class="img-fluid">
+              <div class="portfolio-info">
+                <h4>Toad in Super Mario</h4>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/solidworks4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="First 3D project inspired by Toad in Super Mario"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-design">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/design1.png" class="img-fluid">
@@ -546,6 +558,18 @@
                 <h4>MediBrush: Hair-Washing Brush For People With Arthritis</h4>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/design3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Designed and created a medium-fidelity prototype (Group project)"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-design">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/design4.png" class="img-fluid">
+              <div class="portfolio-info">
+                <h4>Hovercraft</h4>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/design4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Best Hovercraft Design Award at Senior Science Competition (Team)"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
