--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="home" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Chaeyeon Lee (Christy)</h1>
-      <p>I'm <span class="typed" data-typed-items="Developer, Designer, Learner, Listener, Swimmer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Leader, Manager, Innovator, Developer, Designer, Learner, Listener, Swimmer"></span></p>
     </div> 
   </section>
   <!-- End Home -->
@@ -72,8 +72,8 @@
           <h2>About</h2>
           <p>From drawing, swmming, soldering, woodworking, designing to programming, I've had a variety of experiences that made me who I am now.
             After countless experiences from starting small by becoming a vice-president of Events for Illuminate Vancouver, a business competition, to hosting a hackathon event, I was able to broaden my knowledge and relationships with others.
-            I've learned from this journey that software development is a key to achieving my dream. Currently, I'm enjoying my life by doing what I am passionate about. I've started with coding games in C++, but now I'm taking a step farther to
-            create web servers and apps and am learning about computer vision, AI, and machine learning.
+            I've learned from this journey that product development is a key to achieving my dream. Currently, I'm enjoying my life by doing what I am passionate about. I've started by creating and designing games and studied product management and development.
+            I have followed agile process of development to ideate, design, and develop products in personal and work projects. 
           </p>
         </div>
 
