--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="home" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Chaeyeon Lee (Christy)</h1>
-      <p>I'm <span class="typed" data-typed-items="Leader, Manager, Innovator, Developer, Designer, Learner, Listener, Swimmer"></span></p>
+      <p>I <span class="typed" data-typed-items="Lead, Manage, Ideate, Develop, Design, Learn, Listen, Swim"></span></p>
     </div> 
   </section>
   <!-- End Home -->
