--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="home" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Chaeyeon Lee (Christy)</h1>
-      <p>I <span class="typed" data-typed-items="Lead, Manage, Ideate, Develop, Design, Learn, Listen, Swim"></span></p>
+      <p>I <span class="typed" data-typed-items="Lead, Manage, Ideate, Develop, Design, Learn, Listen"></span></p>
     </div> 
   </section>
   <!-- End Home -->
@@ -70,9 +70,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>From drawing, swmming, soldering, woodworking, designing to programming, I've had a variety of experiences that made me who I am now.
+          <p>From designing, programming, to managing teams, I've had a variety of experiences that made me who I am now.
             After countless experiences from starting small by becoming a vice-president of Events for Illuminate Vancouver, a business competition, to hosting a hackathon event, I was able to broaden my knowledge and relationships with others.
-            I've learned from this journey that product development is a key to achieving my dream. Currently, I'm enjoying my life by doing what I am passionate about. I've started by creating and designing games and studied product management and development.
+            I've learned from this journey that product development is a key to achieving my dream. Currently, I'm developing my skills by doing what I am passionate about. I've started by creating and designing games and studied product management and development.
             I have followed agile process of development to ideate, design, and develop products in personal and work projects. 
           </p>
         </div>
@@ -132,7 +132,7 @@
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="1134" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support (Tutor & Volunteer)</p>
+              <p>Hours Of Support (Tutor, Mentor, and Volunteer)</p>
             </div>
           </div>
 
@@ -150,7 +150,7 @@
     </section><!-- End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
+    <!-- <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -165,41 +165,6 @@
               <span class="skill">HTML <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CSS <i class="val">60%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">MySQL <i class="val">85%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">MATLAB <i class="val">35%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -221,41 +186,6 @@
             </div>
 
             <div class="progress">
-              <span class="skill">C# <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Python <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">SolidWorks <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Unity <i class="val">85%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Arduino <i class="val">50%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
               <span class="skill">Raspberry Pi <i class="val">45%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
@@ -265,7 +195,7 @@
 
         </div>
       </div>
-    </section><!-- End Skills Section -->
+    </section>End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
@@ -277,6 +207,32 @@
 
         <div class="row">
           <div class="col-lg-6">
+            <h3 class="resume-title">Leadership Roles</h3>
+            <div class="resume-item">
+              <h4>University of Waterloo | Peer Mentor</h4>
+              <h5>Jul 2020 - Dec 2020</h5>
+              <ul>
+                <li>Structured weekly meetings by preparing PowerPoint presentations, short virtual activities, and off-campus resources</li>
+                <li>Scheduled 2 weekly meetings and spent 10 hours each week to manage a group of 30 first-year students to give guidance</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Illuminate Vancouver | Chair at Tekathon (Hackathon)</h4>
+              <h5>Mar 2017 - Jul 2017</h5>
+              <ul>
+                <li>Led a team of 10 executives and delegated tasks to volunteers, executives, and mentors to launch the conference in just 3 months</li>
+                <li>Optimized our social media page by making posts and advertisements, which resulted in having 100+ delegates participate</li>
+                <li>Reached out to workshop speakers and ideated sub-workshops and hackathon topics to provide the best experience to participants</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Illuminate Vancouver | Vice President of Events</h4>
+              <h5>Mar 2017 - Jun 2017</h5>
+              <ul>
+                <li>Organized business competitions by scheduling events and marketing through email, school, website, and social media</li>
+                <li>Resulted in 200+ delegates participate which was more than 15% increase in sign up rates compared to the rates in previous years</li>
+              </ul>
+            </div>
             <h3 class="resume-title">Projects</h3>
             <div class="resume-item">
               <h4>IoT with Temperature and Humidity Sensor | Personal</h4>
@@ -328,23 +284,43 @@
               <h4>University of Waterloo</h4>
               <h5>2019 - 2024</h5>
               <p><em>Candidate for BASc, Honours Biomedical Engineering</em></p>
-              <p>Relevant Coursework: Data Structures and Algorithms (C++), Digital Computation (C#), and Computer-Aided Design (SolidWorks)</p>
+              <p>Relevant Coursework: Product Management and Development, Data Structures and Algorithms (C++), Digital Computation (C#), and Computer-Aided Design (SolidWorks)</p>
             </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>Shoplogix | Product Manager Intern</h4>
+              <h5>May 2022 - Aug 2022</h5>
+              <ul>
+                <li>Improved product performance by analyzing user experience such as tracking the number of events on existing and new features</li>
+                <li>Defined requirements and specifications for features after collecting information from customers and collaborating with engineers</li>
+                <li>Wrote scripts to gather data that helped identify patterns of users navigating product services, which led to finding new solutions</li>
+                <li>Managed and wrote release plans and release notes weekly for both internal employees and external customers</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>VTS-Lane | Product Manager Intern</h4>
+              <h5>Sept 2021 - Dec 2021</h5>
+              <ul>
+                <li>Led weekly meetings to brainstorm and write new user stories for 4 different projects with product managers and designers</li>
+                <li>Provided insights and suggestions during iteration planning meetings (IPM) which increased project’s development rate by 20%</li>
+                <li>Conducted user research to highlight and understand user needs and collaborated with engineers to find the best solutions</li>
+                <li>Followed agile process of development and used Jira to identify bug regressions or feature bugs faster than the expected time frame</li>
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>Jinwoo SMC | Software Engineering Intern</h4>
               <h5>Dec 2020 - Apr 2021</h5>
               <ul>
                 <li>Developed a website that displays tables, graphs, charts, and images from data stored in MySQL, received from various sensors</li>
                 <li>Reduced the company’s budget by $30,000 by creating a web server to receive data through LTE modem connected to Arduino</li>
-                <li>Researched surround view monitoring system and utilized the knowledge to construct the monitoring system using MATLAB and OpenCV</li>
+                <li>Researched user’s preference on surround view monitoring system in aerial lift trucks and formulated user stories to productionize</li>
                 <li>Worked with Raspberry Pi and Arduino to capture live videos and to edit them by converting into frames</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Sterasure | Biomedical Engineering Intern</h4>
+              <h4>Sterasure | Software Product Development Intern</h4>
               <h5>May 2020 - Aug 2020</h5>
               <ul>
                 <li>Created a working dashboard, website, and an app within a month to best display our data to customers, physicians, and researchers</li>
@@ -361,27 +337,8 @@
                <li>Increased the number of viewers and followers by 70% on Instagram by designing educational infographic posts</li>
               </ul>
             </div>
-            <h3 class="resume-title">Leadership Roles</h3>
-            <div class="resume-item">
-              <h4>University of Waterloo | Peer Mentor</h4>
-              <h5>Jul 2020 - Dec 2020</h5>
-              <ul>
-                <li>Structured weekly meetings by preparing PowerPoint presentations, short virtual activities, and off-campus resources</li>
-                <li>Scheduled 2 weekly meetings and spent 10 hours each week to manage a group of 30 first-year students to give guidance</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Illuminate Vancouver | Chair at Tekathon (hackathon)</h4>
-              <h5>Mar 2017 - Jul 2017</h5>
-              <ul>
-                <li>Led a team of 10 executives and delegated tasks to volunteers, executives, and mentors to launch the conference in just 3 months</li>
-                <li>Optimized our social media page by making posts and advertisements, which resulted in having 100+ delegates participate</li>
-                <li>Reached out to workshop speakers and ideated sub-workshops and hackathon topics to provide the best experience to participants</li>
-              </ul>
-            </div>
           </div>
         </div>
-
       </div>
     </section><!-- End Resume Section -->
 
