--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Christy Lee - Portfolio</title>
+    <title>PatientCompanion</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -84,12 +84,11 @@
     <!-- ======= Home Section ======= -->
     <section id="home" class="d-flex flex-column justify-content-center">
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
-        <h1>Chaeyeon Lee (Christy)</h1>
+        <h1>PatientCompanion</h1>
         <p>
-          I
           <span
             class="typed"
-            data-typed-items="Lead, Manage, Ideate, Develop, Design, Learn, Listen"
+            data-typed-items="Manage, Streamline, Communicate, Assist, Improve"
           ></span>
         </p>
       </div>
@@ -101,20 +100,10 @@
       <section id="about" class="about">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
-            <h2>About</h2>
+            <h2>About Us<h2>
             <p>
-              From designing, programming, to managing teams, I've had a variety
-              of experiences that made me who I am now. After countless
-              experiences from starting small by becoming a vice-president of
-              Events for Illuminate Vancouver, a business competition, to
-              hosting a hackathon event, I was able to broaden my knowledge and
-              relationships with others. I've learned from this journey that
-              product development is a key to achieving my dream. Currently, I'm
-              developing my skills by doing what I am passionate about. I've
-              started by creating and designing games and studied product
-              management and development. I have followed agile process of
-              development to ideate, design, and develop products in personal
-              and work projects.
+              We are fourth year Biomedical Engineering students at the University of Waterloo, passionate about briding healthcare and technology. 
+              We are dedicated to streamlining processes in hospitals to help reduce stress and burnout amongst nurses.
             </p>
           </div>
 
@@ -129,19 +118,18 @@
                 <ul>
                   <li>
                     <i class="bi bi-chevron-right"></i>
-                    <strong>GitHub:</strong>
-                    <a href="https://github.com/christylee120">christylee120</a>
-                  </li>
-                  <li>
-                    <i class="bi bi-chevron-right"></i>
                     <strong>LinkedIn:</strong>
                     <a href="https://linkedin.com/in/christy-chaeyeon-lee/"
                       >christy-chaeyeon-lee</a
                     >
+                    <a href="https://www.linkedin.com/in/padmaashini-sukumaran/">padmaashini-sukumaran</a
+                    >
+                    <a href="https://www.linkedin.com/in/sasha-korolov/">sasha-korolov</a
+                    >
                   </li>
                   <li>
                     <i class="bi bi-chevron-right"></i> <strong>Email:</strong>
-                    <span>christy.lee@uwaterloo.ca</span>
+                    <span>patientcompanion.contact@gmail.com</span>
                   </li>
                   <li>
                     <i class="bi bi-chevron-right"></i>
