--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
                 <i class="bi bi-chat"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="3"
+                  data-purecounter-end="95"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p>AWS Certifications (CCP, SAA, DVA)</p>
+                <p>% of nurses reported burn out</p>
               </div>
             </div>
 
@@ -179,9 +179,9 @@
                 <i class="bi bi-journal-richtext"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="12"
+                  data-purecounter-end="67"
                   data-purecounter-duration="1"
-                  class="purecounter"
+                  class="% of patients have recently had a bad healthcare experience"
                 ></span>
                 <p>Projects</p>
               </div>
@@ -192,24 +192,11 @@
                 <i class="bi bi-emoji-smile"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="1134"
+                  data-purecounter-end="52"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p>Hours Of Support (Tutor, Mentor, and Volunteer)</p>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-              <div class="count-box">
-                <i class="bi bi-award"></i>
-                <span
-                  data-purecounter-start="0"
-                  data-purecounter-end="34"
-                  data-purecounter-duration="1"
-                  class="purecounter"
-                ></span>
-                <p>Awards</p>
+                <p>% of nurses are considering leaving their profession</p>
               </div>
             </div>
           </div>
