--- a/index.html
+++ b/index.html
@@ -109,11 +109,17 @@
 
           <div class="row">
             <div class="col-lg-2"></div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
+              <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
+            </div>
+            <div class="col-lg-3">
+              <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
+            </div>
+            <div class="col-lg-3">
               <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-6 pt-2 pt-md-0 content">
-              <h3>Learning enthusiast</h3>
+              <h3>Entrepreneurs</h3>
               <div class="col-lg-8">
                 <ul>
                   <li>
@@ -140,10 +146,6 @@
                     <i class="bi bi-chevron-right"></i>
                     <strong>Degree:</strong>
                     <span>BASc in Biomedical Engineering, Honours</span>
-                  </li>
-                  <li>
-                    <i class="bi bi-chevron-right"></i>
-                    <strong>Graduation Year:</strong> <span>April 2024</span>
                   </li>
                 </ul>
               </div>
