--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
                   data-purecounter-start="0"
                   data-purecounter-end="67"
                   data-purecounter-duration="1"
-                  class="% of patients have recently had a bad healthcare experience"
+                  class="purecounter"
                 ></span>
-                <p>Projects</p>
+                <p>% of patients have recently had a bad healthcare experience</p>
               </div>
             </div>
 
