--- a/index.html
+++ b/index.html
@@ -105,16 +105,20 @@
               We are fourth year Biomedical Engineering students at the University of Waterloo, passionate about briding healthcare and technology. 
               We are dedicated to streamlining processes in hospitals to help reduce stress and burnout amongst nurses.
             </p>
+            <li>
+              <strong>Email:</strong>
+              <span>patientcompanion.contact@gmail.com</span>
+            </li>
           </div>
 
           <div class="row">
-            <div class="col-lg-3">
+            <div class="col-lg-4">
               <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-4">
               <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-4">
               <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-6 pt-2 pt-md-0 content">
@@ -131,20 +135,6 @@
                     >
                     <a href="https://www.linkedin.com/in/sasha-korolov/">sasha-korolov</a
                     >
-                  </li>
-                  <li>
-                    <i class="bi bi-chevron-right"></i> <strong>Email:</strong>
-                    <span>patientcompanion.contact@gmail.com</span>
-                  </li>
-                  <li>
-                    <i class="bi bi-chevron-right"></i>
-                    <strong>University:</strong>
-                    <span>University of Waterloo</span>
-                  </li>
-                  <li>
-                    <i class="bi bi-chevron-right"></i>
-                    <strong>Degree:</strong>
-                    <span>BASc in Biomedical Engineering, Honours</span>
                   </li>
                 </ul>
               </div>
