--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           </div>
 
           <div class="row">
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4">
               <div class="count-box">
                 <span
                   data-purecounter-start="0"
@@ -197,8 +197,8 @@
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="container">
-        <h3>PatientCompanion</h3>
-        <p>More efficient communication</p>
+        <h3>          PatientCompanion</h3>
+        <p>         More efficient communication</p>
       </div>
     </footer>
     <!-- End Footer -->
