--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
               We are fourth year Biomedical Engineering students at the University of Waterloo, passionate about briding healthcare and technology. 
               We are dedicated to streamlining processes in hospitals to help reduce stress and burnout amongst nurses.
             </p>
-            <h4>
-              <strong>Email:</strong>
+            <h4 class="mt-2">
               <span>patientcompanion.contact@gmail.com</span>
             </h4>
           </div>
@@ -116,13 +115,12 @@
               <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-4">
-              <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/padma.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-4">
-              <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/SashaProfilePic.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-6 pt-2 pt-md-0 content">
-              <h3>Entrepreneurs</h3>
               <div class="col-lg-8">
                 <ul>
                   <li>
