--- a/index.html
+++ b/index.html
@@ -66,13 +66,8 @@
             >
           </li>
           <li>
-            <a href="#resume" class="nav-link scrollto"
-              ><i class="bx bx-file-blank"></i> <span>Resume</span></a
-            >
-          </li>
-          <li>
-            <a href="#portfolio" class="nav-link scrollto"
-              ><i class="bx bx-book-content"></i> <span>Portfolio</span></a
+            <a href="#facts" class="nav-link scrollto"
+              ><i class="bx bx-book-content"></i> <span>Facts</span></a
             >
           </li>
         </ul>
