--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@
               We are fourth year Biomedical Engineering students at the University of Waterloo, passionate about briding healthcare and technology. 
               We are dedicated to streamlining processes in hospitals to help reduce stress and burnout amongst nurses.
             </p>
-            <h4 class="mt-2">
-              <span>patientcompanion.contact@gmail.com</span>
+            <h4 class="mt-5">
+              <a href="patientcompanion.contact@gmail.com"
+                >patientcompanion.contact@gmail.com</a
+              >
             </h4>
           </div>
 
@@ -157,7 +159,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
+            <div class="col-lg-4">
               <div class="count-box">
                 <span
                   data-purecounter-start="0"
@@ -169,7 +171,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 mt-5 mt-lg-0">
+            <div class="col-lg-4">
               <div class="count-box">
                 <span
                   data-purecounter-start="0"
