--- a/index.html
+++ b/index.html
@@ -100,16 +100,12 @@
               We are fourth year Biomedical Engineering students at the University of Waterloo, passionate about briding healthcare and technology. 
               We are dedicated to streamlining processes in hospitals to help reduce stress and burnout amongst nurses.
             </p>
-            <h4 class="mt-5">
-              <a href="patientcompanion.contact@gmail.com"
-                >patientcompanion.contact@gmail.com</a
-              >
-            </h4>
+            <h4 class="mt-5">patientcompanion.contact@gmail.com</h4>
           </div>
 
           <div class="row">
             <div class="col-lg-4">
-              <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
+              <img style="max-width:100px;max-height:100px" src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-4">
               <img src="assets/img/padma.jpg" class="img-fluid" alt="" />
@@ -149,6 +145,7 @@
           <div class="row">
             <div class="col-lg-4">
               <div class="count-box">
+                <i class="bi bi-emoji-frown"></i>
                 <span
                   data-purecounter-start="0"
                   data-purecounter-end="95"
@@ -161,6 +158,7 @@
 
             <div class="col-lg-4">
               <div class="count-box">
+                <i class="bi bi-people"></i>
                 <span
                   data-purecounter-start="0"
                   data-purecounter-end="67"
@@ -173,6 +171,7 @@
 
             <div class="col-lg-4">
               <div class="count-box">
+                <i class="bi bi-hospital"></i>
                 <span
                   data-purecounter-start="0"
                   data-purecounter-end="52"
@@ -188,15 +187,6 @@
       <!-- End Facts Section -->
     </main>
     <!-- End #main -->
-
-    <!-- ======= Footer ======= -->
-    <footer id="footer">
-      <div class="container">
-        <h3>          PatientCompanion</h3>
-        <p>         More efficient communication</p>
-      </div>
-    </footer>
-    <!-- End Footer -->
 
     <div id="preloader"></div>
     <a
