--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
 
           <div class="row">
             <div class="col-lg-4">
-              <img style="max-width:100px;max-height:100px" src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
+              <img style="max-width:500px;max-height:500px" src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-4">
-              <img src="assets/img/padma.jpg" class="img-fluid" alt="" />
+              <img style="max-width:500px;max-height:500px" src="assets/img/padma.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-4">
-              <img src="assets/img/SashaProfilePic.jpg" class="img-fluid" alt="" />
+              <img style="max-width:500px;max-height:500px" src="assets/img/SashaProfilePic.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-6 pt-2 pt-md-0 content">
               <div class="col-lg-8">
@@ -171,7 +171,7 @@
 
             <div class="col-lg-4">
               <div class="count-box">
-                <i class="bi bi-hospital"></i>
+                <i class="bi bi-bar-chart"></i>
                 <span
                   data-purecounter-start="0"
                   data-purecounter-end="52"
