--- a/index.html
+++ b/index.html
@@ -106,29 +106,21 @@
           <div class="row">
             <div class="col-lg-4">
               <img style="max-width:300px;max-height:300px" src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
+              <a href="https://linkedin.com/in/christy-chaeyeon-lee/">
+                christy-chaeyeon-lee
+              </a>
             </div>
             <div class="col-lg-4">
               <img style="max-width:300px;max-height:300px" src="assets/img/padma.jpg" class="img-fluid" alt="" />
+              <a href="https://www.linkedin.com/in/padmaashini-sukumaran/">
+                padmaashini-sukumaran
+              </a>
             </div>
             <div class="col-lg-4">
               <img style="max-width:300px;max-height:300px" src="assets/img/SashaProfilePic.jpg" class="img-fluid" alt="" />
-            </div>
-            <div class="col-lg-6 pt-2 pt-md-0 content">
-              <div class="col-lg-8">
-                <ul>
-                  <li>
-                    <i class="bi bi-chevron-right"></i>
-                    <strong>LinkedIn:</strong>
-                    <a href="https://linkedin.com/in/christy-chaeyeon-lee/"
-                      >christy-chaeyeon-lee</a
-                    >
-                    <a href="https://www.linkedin.com/in/padmaashini-sukumaran/">padmaashini-sukumaran</a
-                    >
-                    <a href="https://www.linkedin.com/in/sasha-korolov/">sasha-korolov</a
-                    >
-                  </li>
-                </ul>
-              </div>
+              <a href="https://www.linkedin.com/in/sasha-korolov/">
+                sasha-korolov
+              </a>
             </div>
           </div>
         </div>
