--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
           <div class="row">
             <div class="col-lg-4">
-              <img style="max-width:300px;max-height:300px" src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
+              <img style="max-width:300px;max-height:300px" src="assets/img/christyPic.jpg" class="img-fluid" alt="" />
               <a href="https://linkedin.com/in/christy-chaeyeon-lee/">
                 christy-chaeyeon-lee
               </a>
