--- a/index.html
+++ b/index.html
@@ -106,20 +106,20 @@
           <div class="row">
             <div class="col-lg-4">
               <img style="max-width:400px;max-height:400px" src="assets/img/christyPic.jpg" class="img-fluid" alt="" />
-              <a href="https://linkedin.com/in/christy-chaeyeon-lee/">
-                christy-chaeyeon-lee
+              <a style="font-size:20px" class="mt-3" href="https://linkedin.com/in/christy-chaeyeon-lee/">
+                Christy Lee
               </a>
             </div>
             <div class="col-lg-4">
               <img style="max-width:400px;max-height:400px" src="assets/img/padma.jpg" class="img-fluid" alt="" />
-              <a href="https://www.linkedin.com/in/padmaashini-sukumaran/">
-                padmaashini-sukumaran
+              <a style="font-size:20px" class="mt-3" href="https://www.linkedin.com/in/padmaashini-sukumaran/">
+                Padmaashini Sukumaran
               </a>
             </div>
             <div class="col-lg-4">
               <img style="max-width:400px;max-height:400px" src="assets/img/SashaProfilePic.jpg" class="img-fluid" alt="" />
-              <a href="https://www.linkedin.com/in/sasha-korolov/">
-                sasha-korolov
+              <a style="font-size:20px" class="mt-3" href="https://www.linkedin.com/in/sasha-korolov/">
+                Sasha Korolov
               </a>
             </div>
           </div>
