Update image styling

--- a/index.html
+++ b/index.html
@@ -106,19 +106,19 @@
           <div class="row">
             <div class="col-lg-4">
               <img style="max-width:400px;max-height:400px" src="assets/img/christyPic.jpg" class="img-fluid" alt="" />
-              <a style="font-size:20px" class="mt-3" href="https://linkedin.com/in/christy-chaeyeon-lee/">
+              <a style="font-size:20px;margin-top:15px" href="https://linkedin.com/in/christy-chaeyeon-lee/">
                 Christy Lee
               </a>
             </div>
             <div class="col-lg-4">
               <img style="max-width:400px;max-height:400px" src="assets/img/padma.jpg" class="img-fluid" alt="" />
-              <a style="font-size:20px" class="mt-3" href="https://www.linkedin.com/in/padmaashini-sukumaran/">
+              <a style="font-size:20px;margin-top:15px" href="https://www.linkedin.com/in/padmaashini-sukumaran/">
                 Padmaashini Sukumaran
               </a>
             </div>
             <div class="col-lg-4">
               <img style="max-width:400px;max-height:400px" src="assets/img/SashaProfilePic.jpg" class="img-fluid" alt="" />
-              <a style="font-size:20px" class="mt-3" href="https://www.linkedin.com/in/sasha-korolov/">
+              <a style="font-size:20px;margin-top:15px" href="https://www.linkedin.com/in/sasha-korolov/">
                 Sasha Korolov
               </a>
             </div>
