--- a/index.html
+++ b/index.html
@@ -100,25 +100,25 @@
               We are fourth year Biomedical Engineering students at the University of Waterloo, passionate about briding healthcare and technology. 
               We are dedicated to streamlining processes in hospitals to help reduce stress and burnout amongst nurses.
             </p>
-            <h4 class="mt-5">patientcompanion.contact@gmail.com</h4>
+            <h4 class="mt-5 mb-2">patientcompanion.contact@gmail.com</h4>
           </div>
 
           <div class="row">
             <div class="col-lg-4">
               <img style="max-width:400px;max-height:400px" src="assets/img/christyPic.jpg" class="img-fluid" alt="" />
-              <a style="font-size:20px;margin-top:15px" href="https://linkedin.com/in/christy-chaeyeon-lee/">
+              <a style="font-size:20px;margin-top:15px" target="_blank" href="https://linkedin.com/in/christy-chaeyeon-lee/">
                 Christy Lee
               </a>
             </div>
             <div class="col-lg-4">
               <img style="max-width:400px;max-height:400px" src="assets/img/padma.jpg" class="img-fluid" alt="" />
-              <a style="font-size:20px;margin-top:15px" href="https://www.linkedin.com/in/padmaashini-sukumaran/">
+              <a style="font-size:20px;margin-top:15px" target="_blank" href="https://www.linkedin.com/in/padmaashini-sukumaran/">
                 Padmaashini Sukumaran
               </a>
             </div>
             <div class="col-lg-4">
               <img style="max-width:400px;max-height:400px" src="assets/img/SashaProfilePic.jpg" class="img-fluid" alt="" />
-              <a style="font-size:20px;margin-top:15px" href="https://www.linkedin.com/in/sasha-korolov/">
+              <a style="font-size:20px;margin-top:15px" target="_blank" href="https://www.linkedin.com/in/sasha-korolov/">
                 Sasha Korolov
               </a>
             </div>
