--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="section-title">
             <h2>About Us</h2>
             <p>
-              We are fourth year Biomedical Engineering students at the University of Waterloo, passionate about briding healthcare and technology. 
+              We are fourth year Biomedical Engineering students at the University of Waterloo, passionate about bridging healthcare and technology. 
               We are dedicated to streamlining processes in hospitals to help reduce stress and burnout amongst nurses.
             </p>
             <h4 class="mt-5 mb-4">patientcompanion.contact@gmail.com</h4>
