--- a/index.html
+++ b/index.html
@@ -110,6 +110,18 @@
                 Christy Lee
               </a>
             </div>
+            <div class="col-lg-4">
+              <img style="max-width:400px;max-height:400px" src="assets/img/padma.jpg" class="img-fluid" alt="" />
+              <a style="font-size:20px;margin-top:15px" target="_blank" href="https://www.linkedin.com/in/padmaashini-sukumaran/">
+                Padmaashini Sukumaran
+              </a>
+            </div>
+            <div class="col-lg-4">
+              <img style="max-width:400px;max-height:400px" src="assets/img/SashaProfilePic.jpg" class="img-fluid" alt="" />
+              <a style="font-size:20px;margin-top:15px" target="_blank" href="https://www.linkedin.com/in/sasha-korolov/">
+                Sasha Korolov
+              </a>
+            </div>
           </div>
         </div>
       </section>
